--- a/CG/Views/Shared/_Layout.cshtml
+++ b/CG/Views/Shared/_Layout.cshtml
@@ -17,8 +17,7 @@
             ]);
 
         var options = {
-          title: 'Company Performance',
-          curveType: 'function',
+          title: 'Chart',
           legend: { position: 'bottom' }
         };
 
